--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>
-      Launchaco - Name a Business.
+      Buttonjoy - Connect buttons to emails, spreadsheets, and more.
     </title>
     <meta charSet="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -14,15 +14,12 @@
         <div class="col-12 spread">
           <div>
             <a class="logo">
-              Buttonjoy
+              <img src="img/b-logo.png" width="35" height="35" /> Buttonjoy
             </a>
           </div>
           <div>
-            <a class="nav-link" href="#">
-              Twitter
-            </a>
-            <a class="nav-link" href="#">
-              Facebook
+            <a class="nav-link" href="https://cloudstitch.com">
+              Made with 💪 by Cloudstitch
             </a>
           </div>
         </div>
@@ -30,28 +27,28 @@
       <div class="container-lrg flex">
         <div class="col-6 centervertical">
           <h1 class="heading">
-            Push button.
+            Let your customers tell you when they need refills.
           </h1>
-          <h2 class="paragraph ">
-            <div><b>Push a button</b></div><div><b>Private beta pricing: $2 / Month per button</b></div>
+          <h2 class="paragraph" style="font-size: 1.4em">
+            <div>Crazy simple setup. Just $2 / month per button</div>
           </h2>
-          <div class="ctas">
-            <input class="ctas-input" type="text" placeholder="Your Email Address">
+          <form class="ctas" method="POST">
+            <input class="ctas-input" type="text" placeholder="Email Address"><br/>
+            <input class="ctas-input" type="text" placeholder="Expected # Buttons"><br/>
+            <input class="ctas-input" type="text" placeholder="Industry"><br/>
             <button class="ctas-button">
-              Sign Up
+              Sign Up for Beta
             </button>
-          </div>
+          </form>
         </div>
         <div class="col-6 sidedevices">
           <div class="iphones">
+            <div class="iot-button">
+              <img class="mask-img" src="img/button.png" style="max-width: 220px">
+            </div>
             <div class="iphone">
               <div class="mask">
-                <img class="mask-img" src="img/mobileapp.svg">
-              </div>
-            </div>
-            <div class="iphone iphone__2">
-              <div class="mask">
-                <img class="mask-img" src="img/mobileapp.svg">
+                <img class="mask-img" src="img/iphonescreen.png">
               </div>
             </div>
           </div>
@@ -62,57 +59,15 @@
       <div class="container-sml">
         <div class="col-12 text-center">
           <h3 class="heading">
-            Give your customers buttons that...
+            Give your customers buttons they can push that...
           </h3>
-          <p class="paragraph">
-            Configure
-          </p>
-        </div>
-      </div>
-      <div class="container-lrg centerdevices col-12">
-        <div class="iphoneipad2">
-          <div class="iphone">
-            <div class="mask">
-              <img class="mask-img" src="img/mobileapp.svg">
-            </div>
-          </div>
-          <div class="ipad">
-            <div class="mask">
-              <img class="mask-img" src="img/webapp.svg">
-            </div>
-          </div>
         </div>
       </div>
     </div>
+
     <div class="feature2">
       <div class="container-lrg flex">
-        <div class="col-6">
-          <b class="emoji">
-            💬
-          </b>
-          <h3 class="subheading">
-            Notify Slack
-          </h3>
-          <p class="paragraph">
-            Launchaco instantly shows you the most relevant domain names. Followed by hundreds of new gtlds. Get your .gold domain name today!
-          </p>
-        </div>
-        <div class="col-6">
-          <b class="emoji">
-            🤖
-          </b>
-          <h3 class="subheading">
-            Run code
-          </h3>
-          <p class="paragraph">
-            Naming your brand has never been soooo easy! With Launchaco you can instantly search for twitter, facebook, medium, and instagram handles.
-          </p>
-        </div>
-      </div>
-    </div>
-    <div class="feature2">
-      <div class="container-lrg flex">
-        <div class="col-6">
+        <div class="col-4">
           <b class="emoji">
             📨
           </b>
@@ -120,98 +75,45 @@
             Send you an email
           </h3>
           <p class="paragraph">
-            Launchaco instantly shows you the most relevant domain names. Followed by hundreds of new gtlds. Get your .gold domain name today!
+            Create email templates that get sent to your team with customer information!
           </p>
         </div>
-        <div class="col-6">
+        <div class="col-4">
           <b class="emoji">
             📝
           </b>
           <h3 class="subheading">
-            Record data in a spreadsheet
+            Updates a spreadsheet
           </h3>
           <p class="paragraph">
-            Naming your brand has never been soooo easy! With Launchaco you can instantly search for twitter, facebook, medium, and instagram handles.
+            We give you a spreadsheet that stays in sync with all button clicks. 
           </p>
         </div>
-      </div>
-    </div>
-    <div class="feature5">
-      <div class="container-sml text-center">
-        <div class="col-12">
-          <h3 class="heading">
-            Brilliant Domain Names.
+        <div class="col-4">
+          <b class="emoji">
+            🤖
+          </b>
+          <h3 class="subheading">
+            Runs code
           </h3>
+          <p class="paragraph">
+            If you have custom code you need to execute, we can help you wire it up.
+
+          </p>
         </div>
-      </div>
-      <div class="container-lrg flex">
-        <div class="col-5 centervertical">
-          <div class="steps">
-            <div class="emoji">
-              <b>
-                💧
-              </b>
-            </div>
-            <h3 class="subheading">
-              Water Delivery
-            </h3>
-            <p class="paragraph">
-              Launchaco instantly shows you the most relevant domain names. Followed by hundreds of new gtlds. Get your .gold domain name today!
-            </p>
-          </div>
-          <div class="steps">
-            <div class="emoji">
-              <b>
-                🍩
-              </b>
-            </div>
-            <h3 class="subheading">
-              Vending &amp; Snack Refill
-            </h3>
-            <p class="paragraph">
-              Refill&nbsp;
-            </p>
-          </div>
-          <div class="steps">
-            <div class="emoji">
-              <b>
-                ⌛
-              </b>
-            </div>
-            <h3 class="subheading">
-              Event Tracking
-            </h3>
-            <p class="paragraph">
-              A full vending machine&nbsp;
-            </p>
-          </div>
-        </div>
-        <div class="col-1">
-        </div>
-        <div class="col-6">
-          <div class="sidedevices">
-            <div class="iphoneipad2">
-              <div class="iphone">
-                <div class="mask">
-                  <img class="mask-img" src="img/mobileapp.svg">
-                </div>
-              </div>
-              <div class="ipad">
-                <div class="mask">
-                  <img class="mask-img" src="img/webapp.svg">
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
+
       </div>
     </div>
+
+
+
+
     <div class="socialproof">
       <div class="container-sml">
         <div class="text-center">
           <div class="col-12">
             <h4 class="heading">
-              By the creator of the <br>original Dash Hack
+              By the creator of the <br><a href="https://medium.com/@edwardbenson/how-i-hacked-amazon-s-5-wifi-button-to-track-baby-data-794214b0bdd8#.1n2lnrthl">original Dash Hack</a>
             </h4>
           </div>
         </div>
@@ -223,17 +125,17 @@
               <div class="flex flexvert">
                 <div>
                   <b>
-                    Username
+                    Bill Briggs
                   </b>
                   <br>
                   <span class=>
-                    @justcreative
+                    @wdbthree
                   </span>
                 </div>
               </div>
               <div class="testimonial-content">
                 <p class="paragraph">
-                  Launchaco is a handy tool to help name your business. It checks domains &amp; social media handles for you :)!
+                  Absolutely love this; hack to use $5 Amazon Dash Button to track baby data (or: anything else you can imagine)
                 </p>
               </div>
             </div>
@@ -243,17 +145,17 @@
               <div class="flex flexvert">
                 <div>
                   <b>
-                    Username
+                    Unha Engels
                   </b>
                   <br>
                   <span class=>
-                    @KurtisAmundson
+                    @unha_engels
                   </span>
                 </div>
               </div>
               <div class="testimonial-content">
                 <p class="paragraph">
-                  Check out http://launchaco.com  when you brand your social and internet presence. Great work @launchaco
+                    Amazeballs. Guess what i'm doing this weekend? <a href="http://www.twitter.com/edwardbenson">@edwardbenson</a>, it's genius. I wonder how many people just bought DASH
                 </p>
               </div>
             </div>
@@ -263,17 +165,17 @@
               <div class="flex flexvert">
                 <div>
                   <b>
-                    Username
+                    Trevor Young
                   </b>
                   <br>
                   <span class=>
-                    @namli
+                    @_tyoung
                   </span>
                 </div>
               </div>
               <div class="testimonial-content">
                 <p class="paragraph">
-                  hey @launchaco you do perfect service for non creative us. Thx a lot  : )
+                  <a href="http://www.twitter.com/edwardbenson">@edwardbenson</a> Hey Ted! We used your amazon dash hack for a cool office productivity booster. Thanks!
                 </p>
               </div>
             </div>
@@ -285,50 +187,37 @@
       <div class="container-sml flex text-center">
         <div class="col-12">
           <h3 class="heading">
-            $2 / Month per Button<br>
+            Crazy simple setup. <br />Just $2 / month per button.<br>
           </h3>
           <div class="ctas">
-            <input class="ctas-input" type="text" placeholder="Your Email Address">
+            <input class="ctas-input" type="text" placeholder="Your Email Address"><br />
+            <input class="ctas-input" type="text" placeholder="Expected # Buttons"><br />
+            <input class="ctas-input" type="text" placeholder="Your Industry"><br />
             <button class="ctas-button">
-              Sign Up
+              Contact Me
             </button>
           </div>
         </div>
       </div>
       <div class="container-lrg footer-nav flex">
-        <div class="col-3 vertical">
-          <a class="logo">
+        <div class="col-4 vertical">
+          <a class="logo" href="http://www.buttonjoy.com">
             Buttonjoy
           </a>
           <a class="nav-link2">
-            ©2016 Compute.Studio
+            ©2016 Cloudstitch Inc.
           </a>
         </div>
-        <div class="col-3 vertical">
-          <a class="nav-link2">
-            About
+        <div class="col-4 vertical">
+          <a class="nav-link2" href="https://www.cloudstitch.com">
+            Made by <u>Cloudstitch</u>
           </a>
-          <a class="nav-link2">
-            Features
-          </a>
-          <a class="nav-link2">
-            Pricing
-          </a>
+          We building a better web stack that powers web sites using ordinary spreadsheets and word docs.  
         </div>
-        <div class="col-3 vertical">
-          <a class="nav-link2">
-            Twitter
-          </a>
-          <a class="nav-link2">
-            Facebook
-          </a>
-          <a class="nav-link2">
-            Contact
-          </a>
-        </div>
-        <div class="col-3 vertical">
-          <a class="nav-link2">
-            123 Address lane #708, 90210, California, United States of America
+        <div class="col-4 vertical">
+          <a class="nav-link2" href="https://www.cloudstitch.com/hiring">
+            <b>We're hiring!</b><br />
+            cloudstitch.com/hiring
           </a>
         </div>
       </div>
