--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
       <div class="container-lrg">
         <div class="col-12 spread">
           <div>
-            <a class="logo">
-              <img src="img/b-logo.png" width="35" height="35" /> Buttonjoy
+            <a class="logo" href="http://www.buttonjoy.com">
+              <img src="img/b-logo.png" width="40" height="40" style="vertical-align: middle"/>&nbsp;<span style="vertical-align: middle">Buttonjoy</span>
             </a>
           </div>
-          <div>
-            <a class="nav-link" href="https://cloudstitch.com">
-              Made with 💪 by Cloudstitch
+          <div style="margin-top: 6px">
+            <a href="https://cloudstitch.com">
+              Made with 💪 &nbsp;by Cloudstitch
             </a>
           </div>
         </div>
@@ -194,7 +194,7 @@
             <input class="ctas-input" type="text" placeholder="Expected # Buttons"><br />
             <input class="ctas-input" type="text" placeholder="Your Industry"><br />
             <button class="ctas-button">
-              Contact Me
+              Sign Up for Beta
             </button>
           </div>
         </div>
@@ -210,7 +210,7 @@
         </div>
         <div class="col-4 vertical">
           <a class="nav-link2" href="https://www.cloudstitch.com">
-            Made by <u>Cloudstitch</u>
+              Made with 💪 &nbsp;by Cloudstitch
           </a>
           We building a better web stack that powers web sites using ordinary spreadsheets and word docs.  
         </div>
