--- a/index.html
+++ b/index.html
@@ -5,6 +5,33 @@
     </title>
     <meta charSet="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
+
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" >
+    <title></title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="keywords" content="Dash, IoT, Cloudstitch, Spreadsheet, Hack, Maker" >
+    <meta name="description" content="Connect real world buttons to emails, spreadsheets, code, and more.">
+    <!--FACEBOOK-->
+    <meta property="og:title" content="Buttonjoy" >
+    <meta property="og:site_name" content="Buttonjoy">
+    <meta property="og:url" content="http://www.buttonjoy.com" >
+    <meta property="og:description" content="Connect buttons to emails, spreadsheets, and more." >
+    <meta property="og:image" content="http://www.buttonjoy.com/img/facebook-card.png" >
+    <meta property="fb:app_id" content="" >
+    <meta property="og:type" content="website" >
+    <meta property="og:locale" content="en-US" >
+    <!--TWITTER-->
+    <meta property="twitter:card" content="summary" >
+    <meta property="twitter:title" content="Buttonjoy" >
+    <meta property="twitter:description" content="Connect buttons to emails, spreadsheets, and more." >
+    <meta property="twitter:creator" content="Cloudstitch" >
+    <meta property="twitter:url" content="http://www.buttonjoy.com" >
+    <meta property="twitter:image" content="http://www.buttonjoy.com/img/twitter-card.png" >
+    <meta property="twitter:image:alt" content="" >
+    <!--GOOGLE+-->
+    <link rel="author" href="Cloudstitch">
+    <link rel="publisher" href="Cloudstitch">
+
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <link rel="stylesheet" type="text/css" href="css/devices.css">
   </head>
