--- a/index.html
+++ b/index.html
@@ -21,11 +21,13 @@
     <meta property="og:type" content="website" >
     <meta property="og:locale" content="en-US" >
     <!--TWITTER-->
-    <meta property="twitter:card" content="summary" >
+    <meta property="twitter:card" content="summary_large_image" >
     <meta property="twitter:title" content="Buttonjoy" >
     <meta property="twitter:description" content="Connect buttons to emails, spreadsheets, and more." >
     <meta property="twitter:creator" content="Cloudstitch" >
     <meta property="twitter:url" content="http://www.buttonjoy.com" >
+    <meta property="twitter:site" content="@buttonjoy" >
+    <meta property="twitter:creator" content="@cloudstitch" >
     <meta property="twitter:image" content="http://www.buttonjoy.com/img/twitter-card.png" >
     <meta property="twitter:image:alt" content="" >
     <!--GOOGLE+-->
