--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           </div>
           <div style="margin-top: 6px">
             <a href="https://cloudstitch.com">
-              Made with 💪 &nbsp;by Cloudstitch
+              Made by Cloudstitch
             </a>
           </div>
         </div>
@@ -239,7 +239,7 @@
         </div>
         <div class="col-4 vertical">
           <a class="nav-link2" href="https://www.cloudstitch.com">
-              Made with 💪 &nbsp;by Cloudstitch
+              Made by Cloudstitch
           </a>
           We building a better web stack that powers web sites using ordinary spreadsheets and word docs.  
         </div>
