--- a/index.html
+++ b/index.html
@@ -62,6 +62,8 @@
             <div>Crazy simple setup. Just $2 / month per button</div>
           </h2>
           <form class="ctas" method="POST" action="//api.cloudstitch.com/buttonjoy/buttonjoy-interest/datasources/sheet">
+            <input type="hidden" name="_redirect" value="http://buttonjoy.com/thanks.html" />      
+            <input type="hidden" name="WhichForm" value="Footer1" />      
             <input name="Email" class="ctas-input" type="text" placeholder="Email Address"><br/>
             <input name="ButtonCount" class="ctas-input" type="text" placeholder="Expected # Buttons"><br/>
             <input name="Industry" class="ctas-input" type="text" placeholder="Industry"><br/>
@@ -219,6 +221,8 @@
             Crazy simple setup. <br />Just $2 / month per button.<br>
           </h3>
           <form class="ctas" method="POST" action="//api.cloudstitch.com/buttonjoy/buttonjoy-interest/datasources/sheet">
+            <input type="hidden" name="_redirect" value="http://buttonjoy.com/thanks.html" />      
+            <input type="hidden" name="WhichForm" value="Footer1" />      
             <input name="Email" class="ctas-input" type="text" placeholder="Email Address"><br/>
             <input name="ButtonCount" class="ctas-input" type="text" placeholder="Expected # Buttons"><br/>
             <input name="Industry" class="ctas-input" type="text" placeholder="Industry"><br/>
