--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           </h2>
           <form class="ctas" method="POST" action="//api.cloudstitch.com/buttonjoy/buttonjoy-interest/datasources/sheet">
             <input type="hidden" name="_redirect" value="http://buttonjoy.com/thanks.html" />      
-            <input type="hidden" name="WhichForm" value="Footer1" />      
+            <input type="hidden" name="WhichForm" value="Header1" />      
             <input name="Email" class="ctas-input" type="text" placeholder="Email Address"><br/>
             <input name="ButtonCount" class="ctas-input" type="text" placeholder="Expected # Buttons"><br/>
             <input name="Industry" class="ctas-input" type="text" placeholder="Industry"><br/>
