--- a/index.html
+++ b/index.html
@@ -255,5 +255,18 @@
         </div>
       </div>
     </div>
+    <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+    var xhr = new XMLHttpRequest();
+    ga('create', 'UA-51170573-2', 'auto');
+    ga('send', 'pageview');
+    xhr.open('GET', 'https://api.cloudstitch.com/buttonjoy/buttonjoy-interest');
+    xhr.send(null);
+    </script>
+
+
   </body>
 </html>
