--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
             <input type="hidden" name="_redirect" value="http://buttonjoy.com/thanks.html" />      
             <input type="hidden" name="WhichForm" value="Header1" />      
             <input name="Email" class="ctas-input" type="text" placeholder="Email Address"><br/>
+            <input name="Phone" class="ctas-input" type="text" placeholder="Phone Number"><br/>
             <input name="ButtonCount" class="ctas-input" type="text" placeholder="Expected # Buttons"><br/>
             <input name="Industry" class="ctas-input" type="text" placeholder="Industry"><br/>
             <button class="ctas-button">
@@ -224,6 +225,7 @@
             <input type="hidden" name="_redirect" value="http://buttonjoy.com/thanks.html" />      
             <input type="hidden" name="WhichForm" value="Footer1" />      
             <input name="Email" class="ctas-input" type="text" placeholder="Email Address"><br/>
+            <input name="Phone" class="ctas-input" type="text" placeholder="Phone Number"><br/>
             <input name="ButtonCount" class="ctas-input" type="text" placeholder="Expected # Buttons"><br/>
             <input name="Industry" class="ctas-input" type="text" placeholder="Industry"><br/>
             <button class="ctas-button">
