--- a/thanks.html
+++ b/thanks.html
@@ -1,9 +1,89 @@
-Thanks!
+<html>
+  <head>
+    <title>
+      Buttonjoy - Connect buttons to emails, spreadsheets, and more.
+    </title>
+    <meta charSet="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
 
-We'll be in touch soon to help you get set up.
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" >
+    <title></title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="keywords" content="Dash, IoT, Cloudstitch, Spreadsheet, Hack, Maker" >
+    <meta name="description" content="Connect real world buttons to emails, spreadsheets, code, and more.">
+    <!--FACEBOOK-->
+    <meta property="og:title" content="Buttonjoy" >
+    <meta property="og:site_name" content="Buttonjoy">
+    <meta property="og:url" content="http://www.buttonjoy.com" >
+    <meta property="og:description" content="Connect buttons to emails, spreadsheets, and more." >
+    <meta property="og:image" content="http://www.buttonjoy.com/img/facebook-card.png" >
+    <meta property="fb:app_id" content="" >
+    <meta property="og:type" content="website" >
+    <meta property="og:locale" content="en-US" >
+    <!--TWITTER-->
+    <meta property="twitter:card" content="summary_large_image" >
+    <meta property="twitter:title" content="Buttonjoy" >
+    <meta property="twitter:description" content="Connect buttons to emails, spreadsheets, and more." >
+    <meta property="twitter:creator" content="Cloudstitch" >
+    <meta property="twitter:url" content="http://www.buttonjoy.com" >
+    <meta property="twitter:site" content="@buttonjoy" >
+    <meta property="twitter:creator" content="@cloudstitch" >
+    <meta property="twitter:image" content="http://www.buttonjoy.com/img/twitter-card.png" >
+    <meta property="twitter:image:alt" content="" >
+    <!--GOOGLE+-->
+    <link rel="author" href="Cloudstitch">
+    <link rel="publisher" href="Cloudstitch">
 
+    <link rel="stylesheet" type="text/css" href="css/main.css">
+    <link rel="stylesheet" type="text/css" href="css/devices.css">
+  </head>
+  <body>
+    <header class="header">
+      <div class="container-lrg">
+        <div class="col-12 spread">
+          <div>
+            <a class="logo" href="http://www.buttonjoy.com">
+              <img src="img/b-logo.png" width="40" height="40" style="vertical-align: middle"/>&nbsp;<span style="vertical-align: middle">Buttonjoy</span>
+            </a>
+          </div>
+          <div style="margin-top: 6px">
+            <a href="https://cloudstitch.com">
+              Powered by Cloudstitch
+            </a>
+          </div>
+        </div>
+      </div>
 
--Ted &amp; the Cloudstitch Team
+      <div class="container-sml flex text-center">
+        <div class="col-12">
+          <h3 class="heading">
+            Thanks for your interest.
+          </h3>
+          <p>We'll be in touch soon</p>
+        </div>
+      </div>
 
+      <div class="container-lrg footer-nav flex">
+        <div class="col-4 vertical">
+        </div>
+        <div class="col-4 vertical">
+          <a class="nav-link2" href="https://www.cloudstitch.com">
+              Buttonjoy is powered by Cloudstitch
+          </a>
+          We building a better web stack that powers web sites using ordinary spreadsheets and word docs.  
+        </div>
+        <div class="col-4 vertical">
+        </div>
+      </div>
 
-Buttonjoy is powered by Cloudstitch, a service that lets you power web sites with your ❤️
+      </header>
+    <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+    ga('create', 'UA-51170573-2', 'auto');
+    ga('send', 'pageview');
+    </script>
+  </body>
+</html>
