--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       <div class="container-lrg flex">
         <div class="col-6 centervertical">
           <h1 class="heading">
-            Let your customers tell you when they need refills.
+            Make reordering your product as easy as pushing a button.
           </h1>
           <h2 class="paragraph" style="font-size: 1.4em">
             <div>Crazy simple setup. Just $2 / month per button</div>
@@ -87,14 +87,59 @@
         </div>
       </div>
     </header>
+
+    We make you more money.
+
+    Do your customers wait for scheduled visits?
+    Does reordering require a phone call?
+
+    Don
+
+    When your customers wait for a scheduled visit, you lose money.
+    When your customers wait until a convienent time to call, you lose money.
+
+
+
+
     <div class="feature1">
       <div class="container-sml">
         <div class="col-12 text-center">
           <h3 class="heading">
-            Give your customers buttons they can push that...
+            Consierge setup.
           </h3>
         </div>
       </div>
+      <div class="container-sml">
+        <div class="col-4 text-center">
+          <img src="img/consierge.png" style="max-height: 300px; align:left"/>
+        </div>
+        <div class="col-8 text-center">
+          <h3 class="heading">
+            Consierge setup.
+          </h3>
+        </div>
+      </div>
+
+    </div>
+
+    <div class="feature1">
+      <div class="container-sml">
+        <div class="col-12 text-center">
+          <h3 class="heading">
+            Consierge setup.
+
+            We provide the buttons with whatever you need.
+
+            Send emails
+            Update spreadsheets
+            Text your cell phone
+            Authorize payments
+            Run code
+
+          </h3>
+        </div>
+      </div>
+
     </div>
 
     <div class="feature2">
@@ -138,8 +183,6 @@
     </div>
 
 
-
-
     <div class="socialproof">
       <div class="container-sml">
         <div class="text-center">
@@ -147,6 +190,7 @@
             <h4 class="heading">
               By the creator of the <br><a href="https://medium.com/@edwardbenson/how-i-hacked-amazon-s-5-wifi-button-to-track-baby-data-794214b0bdd8#.1n2lnrthl">original Dash Hack</a>
             </h4>
+            We've been building smart buttons since the day they were born.
           </div>
         </div>
       </div>
