--- a/thanks.html
+++ b/thanks.html
@@ -37,42 +37,37 @@
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <link rel="stylesheet" type="text/css" href="css/devices.css">
   </head>
-  <body>
+  <body style="background-color: #e65142">
     <header class="header">
       <div class="container-lrg">
         <div class="col-12 spread">
-          <div>
             <a class="logo" href="http://www.buttonjoy.com">
               <img src="img/b-logo.png" width="40" height="40" style="vertical-align: middle"/>&nbsp;<span style="vertical-align: middle">Buttonjoy</span>
             </a>
-          </div>
-          <div style="margin-top: 6px">
-            <a href="https://cloudstitch.com">
-              Powered by Cloudstitch
-            </a>
-          </div>
         </div>
       </div>
 
-      <div class="container-sml flex text-center">
+      <div class="container-sml flex text-center" style="padding-top: 150px">
         <div class="col-12">
           <h3 class="heading">
-            Thanks for your interest.
+            Thanks for your interest!
           </h3>
-          <p>We'll be in touch soon</p>
+          <h2>We'll be in touch in a jiffy.</h2>
         </div>
       </div>
 
-      <div class="container-lrg footer-nav flex">
-        <div class="col-4 vertical">
+      <div class="container-lrg footer-nav flex" style="margin-top: 100px">
+        <div class="col-3 vertical">
         </div>
-        <div class="col-4 vertical">
-          <a class="nav-link2" href="https://www.cloudstitch.com">
-              Buttonjoy is powered by Cloudstitch
+        <div class="col-6 vertical" style="padding: 10px; text-align:center;">
+          <a class="nav-link2" href="https://www.cloudstitch.com" style="font-size: 1.2em">
+              Buttonjoy is powered by <b>Cloudstitch</b>
           </a>
-          We building a better web stack that powers web sites using ordinary spreadsheets and word docs.  
+          <p style="margin-top: 2px;">
+          We connect the web to your office suite.
+          </p>
         </div>
-        <div class="col-4 vertical">
+        <div class="col-3 vertical">
         </div>
       </div>
 
