--- a/site/index.html
+++ b/site/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com -->
-<!--  Last Published: Mon Feb 06 2017 23:38:08 GMT+0000 (UTC)  -->
+<!--  Last Published: Wed Feb 08 2017 18:14:07 GMT+0000 (UTC)  -->
 <html data-wf-page="5858906d4007680b63d14967" data-wf-site="5858906d4007680b63d14966">
 <head>
   <meta charset="utf-8">
@@ -304,6 +304,14 @@
         </div>
       </div>
     </div>
+    <div class="bg-orange">
+      <div class="centered centered-div">
+        <div class="centered-div w-embed">
+          <!--  Go to www.addthis.com/dashboard to customize your tools  -->
+          <div class="addthis_inline_share_toolbox"></div>
+        </div>
+      </div>
+    </div>
   </div>
   <div class="make-money">
     <div class="w-container">
@@ -466,32 +474,56 @@
         document.getElementById('Target').setAttribute('placeholder', msg);
       });
     }
-
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
     m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
     })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
     ga('create', 'UA-51170573-2', 'auto');
     ga('send', 'pageview');
   </script>
-
-  <!-- Facebook Pixel Code -->
+  <!--  Facebook Pixel Code  -->
   <script>
-  !function(f,b,e,v,n,t,s){if(f.fbq)return;n=f.fbq=function(){n.callMethod?
-  n.callMethod.apply(n,arguments):n.queue.push(arguments)};if(!f._fbq)f._fbq=n;
-  n.push=n;n.loaded=!0;n.version='2.0';n.queue=[];t=b.createElement(e);t.async=!0;
-  t.src=v;s=b.getElementsByTagName(e)[0];s.parentNode.insertBefore(t,s)}(window,
-  document,'script','https://connect.facebook.net/en_US/fbevents.js');
-  fbq('init', '156331461539073', {
-  em: 'insert_email_variable,'
-  });
-  fbq('track', 'PageView');
+    !function(f,b,e,v,n,t,s){if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+    n.callMethod.apply(n,arguments):n.queue.push(arguments)};if(!f._fbq)f._fbq=n;
+    n.push=n;n.loaded=!0;n.version='2.0';n.queue=[];t=b.createElement(e);t.async=!0;
+    t.src=v;s=b.getElementsByTagName(e)[0];s.parentNode.insertBefore(t,s)}(window,
+    document,'script','https://connect.facebook.net/en_US/fbevents.js');
+    fbq('init', '156331461539073', {
+    em: 'insert_email_variable,'
+    });
+    fbq('track', 'PageView');
   </script>
-  <noscript><img height="1" width="1" style="display:none"
-  src="https://www.facebook.com/tr?id=156331461539073&ev=PageView&noscript=1"
-  /></noscript>
-  <!-- DO NOT MODIFY -->
-  <!-- End Facebook Pixel Code -->
+  <noscript><img height="1" width="1" style="display:none" src="https://www.facebook.com/tr?id=156331461539073&ev=PageView&noscript=1">
+  </noscript>
+  <!--  DO NOT MODIFY  -->
+  <!--  End Facebook Pixel Code  -->
+  <!--  Go to www.addthis.com/dashboard to customize your tools  -->
+  <script type="text/javascript" src="https://s7.addthis.com/js/300/addthis_widget.js#pubid=ra-589b5dd7e81066cf"></script>
+  <script>
+    var rads = document.getElementsByClassName('radio-buy')
+    for (var i = 0; i < rads.length; i++) {
+      var r = rads[i];
+      r.addEventListener('click', function(e) {
+        var msg = '';
+        console.log(e.target.value);
+        switch(e.target.value) {
+          case 'SMS':
+          case 'Phone':
+            msg = 'This phone number';
+            break;
+          case 'Email':
+            msg = 'This email address';
+            break;
+        }
+        document.getElementById('Target').setAttribute('placeholder', msg);
+      });
+    }
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+    ga('create', 'UA-51170573-2', 'auto');
+    ga('send', 'pageview');
+  </script>
 </body>
 </html>
