--- a/src/body.html
+++ b/src/body.html
@@ -29,7 +29,7 @@ src="https://www.facebook.com/tr?id=156331461539073&ev=PageView&noscript=1"
 <!-- Go to www.addthis.com/dashboard to customize your tools --> <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-589b5dd7e81066cf"></script> 
 
 <script>
-  var theSwith = document.getElementById('myonoffswitch');
+  var theSwitch = document.getElementById('myonoffswitch');
   if (theSwitch) {
     // Switch pages.
     theSwitch.addEventListener('change', function() {
