--- a/src/head.html
+++ b/src/head.html
@@ -1,3 +1,7 @@
+<meta content="summary_large_image" property="twitter:card">
+<meta content="@buttonjoy" property="twitter:site">
+<meta content="@edwardbenson" property="twitter:creator">
+
 <style>
 .bg-orange .footer-block a {
   color: white;
@@ -240,6 +244,10 @@
   -webkit-animation: uil-ring-anim 1s linear infinite;
   -o-animation: uil-ring-anim 1s linear infinite;
   animation: uil-ring-anim 1s linear infinite;
+}
+
+.uil-ring-blue > div {
+  box-shadow: 0 6px 0 0 rgb(50, 79, 165) !important;  
 }
 </style>
 
