--- a/src/purchase-body.html
+++ b/src/purchase-body.html
@@ -1,16 +1,12 @@
-<input type="hidden" id="emailInput" name="email" />
-<input type="hidden" id="stripeToken" name="stripeToken" />
-<script src="https://code.jquery.com/jquery-3.1.1.slim.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 <script src="https://checkout.stripe.com/checkout.js"></script>
 <script>
-
 var rads = document.getElementsByClassName('radio-buy')
 for (var i = 0; i < rads.length; i++) {
   var r = rads[i];
   r.addEventListener('click', function(e) {
     var msg = '';
-    console.log(e.target.value);
-    switch(e.target.value) {
+    switch(jQuery('input[name=Transport]:checked').val()) {
       case 'SMS':
       case 'Phone':
         msg = 'This phone number';
@@ -20,51 +16,53 @@ for (var i = 0; i < rads.length; i++) {
         break;
     }
     document.getElementById('Target').setAttribute('placeholder', msg);
+    document.getElementById('this-number-h4').innerHTML = msg;
   });
 }
 
 var handler = StripeCheckout.configure({
   key: getStripeKey(),
-  image: "http://buttonjoy.com/img/b-256.png",
+  image: "https://buttonjoy.com/img/b-256.png",
   locale: 'auto',
   amount: isCharity() ? 2500 : 3500,
   currency: 'USD',
   billingAddress: true,
   shippingAddress: true,
   name: 'Buttonjoy',
-  description: isCharity() ? 'One Magic Button' : 'One Charity Button',
-  token: function(token) {
+  description: isCharity() ? 'One Charity Button' : 'One Magic Button',
+  token: function(token, args) {
     var data = {
       stripeToken: token,
+      stripeExtras: args,
       kind: isCharity() ? "charity" : "magic",
-      transport: $('input[name=Transport]:checked').val(),
-      target: $('input[name=Target]').val(),
-      message: $('textarea[name=Message]').val(),
-      charity: $('input[name=Charity]').val(),
+      transport: jQuery('input[name=Transport]:checked').val(),
+      target: jQuery('input[name=Target]').val(),      
+      message: jQuery('textarea[name=Message]').val(),
+      charity: jQuery('select[name=Charity]').val(),
       development: isDev(), 
-      share: $('input[name=Sharing]').attr("checked") ? true : false,
-      amount: $('input[name=Amount]').val(),
+      share: jQuery('input[name=Sharing]').prop("checked") ? true : false,
+      amount: jQuery('select[name=Amount]').val(),
       email: token.email
     }
 
-    $('#buy-form').hide();
-    $('#send-me-title').hide();
-    $('.uil-ring-css').show();
+    jQuery('.charity-form').hide();
+    jQuery('#send-me-title').hide();
+    jQuery('.uil-ring-css').show();
 
-    $.ajax({
-      url: "https://5vqutpxqh6.execute-api.us-west-2.amazonaws.com/prod/order", 
+    jQuery.ajax({
+      url: "https://irhrp3ftn9.execute-api.us-west-2.amazonaws.com/prod/order", 
       method: 'post',
       data: JSON.stringify(data),
       contentType: "application/json; charset=utf-8",
       dataType   : "json",  
     }).done(function(a, b, c) {
-      $('#buy-form').hide();
-      $('.w-form-done').first().show();
-      $('.uil-ring-css').hide();
+      jQuery('.charity-form').hide();
+      jQuery('.w-form-done').show();
+      jQuery('.uil-ring-css').hide();
     }).fail(function(a, b, c) {
-      $('#buy-form').hide()
-      $('.w-form-fail').first().show();
-      $('.uil-ring-css').hide();
+      jQuery('.charity-form').hide()
+      jQuery('.w-form-fail').show();
+      jQuery('.uil-ring-css').hide();
     })
   }
 });
